--- a/blog-front/package.json
+++ b/blog-front/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
